feat: all courses json
